--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
+  width: 100%;
+}
+
+html {
+  overflow-x: hidden;
+  width: 100%;
 }
 
 /* Navbar Styles */
@@ -432,7 +439,23 @@ body {
 
 .footer-bottom {
   border-top: 1px solid var(--medium-blue);
-  padding-top: 20px;
+  pcontainer {
+    padding-left: 15px;
+    padding-right: 15px;
+    max-width: 100%;
+  }
+
+  .row {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+
+  .col, [class*="col-"] {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .adding-top: 20px;
   margin-top: 30px;
   text-align: center;
 }
